vcs.h sets up many constants

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 This is an Atari 2600 game. You can edit the source code and build it using Dasm assembler (http://sourceforge.net/projects/dasm-dillon/?_test=b).
+And vcs.h file should sit in the same directory where you are assembling.
 
 $ dasm pong.asm -f3 -opong.bin
 
